@@ -1,3 +1,7 @@
+2014-02-05  Pedro Vicente  <pvicente@uci.edu>
+
+    * Add ncks regression #89 -X and associated coordinates
+
 2014-02-05  Charlie Zender  <zender@uci.edu>
 
 	* Explicitly add -Wuninitialized -Wmaybe-uninitialized to GCC in bld/Makefile
@@ -14,7 +18,7 @@
 
 2014-02-04  Pedro Vicente  <pvicente@uci.edu>
 
-        * Add ncks regression #89 -X writing and associated coordinates
+    * Add ncks regression #89 -X writing and associated coordinates
 
 2014-02-02  Pedro Vicente  <pvicente@uci.edu>
 
